@@ -117,6 +117,7 @@
       <option value="--add-opens=java.desktop/sun.awt=ALL-UNNAMED"/>
       <option value="--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED"/>
       <option value="--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"/>
+      <option value="--add-opens=java.desktop/java.awt=ALL-UNNAMED"/>
       <option value="--enable-native-access=ALL-UNNAMED"/>
     </bundleapp>
   </target>
